--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "firebase": "^10.8.0",
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.22.1",
@@ -31,6 +33,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.43",
+    "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.17",
     "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
